# putty_rs_async

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASING.md  release-plz.toml
.github/workflows/: ci.yml  release-artifacts.yml  release-plz.yml
docs/: index.adoc
docs/pages/: architecture.adoc  config.adoc
docs/puml/: arch_level1.puml  arch_level2.puml  message_sequence.puml
putty_cli/: CHANGELOG.md  Cargo.toml  README.md
putty_cli/src/: logging.rs  main.rs
putty_cli/src/ui/: cli.rs
putty_core/: CHANGELOG.md  Cargo.toml  README.md
putty_core/src/: lib.rs
putty_core/src/connections/: errors.rs  mod.rs
putty_core/src/connections/serial/: mod.rs
putty_core/src/connections/ssh/: ssh_connection.rs
putty_core/src/core/: connection_manager.rs
putty_core/src/storage/: mod.rs  profile.rs  storage.rs  store.rs
putty_core/src/utils/: logging.rs
putty_core/tests/: concurrent.rs  gracefull_shutdown.rs  hw_serial.rs  hw_ssh.rs  io_pipeline.rs  profile_store.rs  roundtrip_and_write.rs
putty_core/tests/common/: fake_connection.rs  mod.rs
putty_grpc_server/: .gitignore  Cargo.toml  build.rs
putty_grpc_server/proto/: putty_interface.proto  terminal.proto
putty_grpc_server/src/: convert.rs  lib.rs  main.rs  putty.rs  server.rs
putty_rs_web/: Cargo.toml  build.rs
putty_rs_web/src/: main.rs  web.rs
putty_storage/: CHANGELOG.md  Cargo.toml
putty_storage/src/: lib.rs  profile.rs  store.rs
putty_storage/tests/: profile_store.rs
python_grpc_client/: grpc_cli_client.py
scripts/: package_release_artifact.sh
src/: lib.rs  main.rs
src/connections/: connection.rs  errors.rs  mod.rs
src/connections/serial/: mod.rs  serial_connection.rs
src/connections/ssh/: mod.rs  ssh_connection.rs
src/core/: application.rs  connection.rs  connection_manager.rs  errors.rs  mod.rs  session.rs
src/ui/: mod.rs
src/ui/cli/: cli.rs  cli_commands.rs  commands.rs
src/ui/gui/: window.rs
src/utils/: logging.rs
webui/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
webui/scripts/: gen_proto.py
webui/src/: App.css  App.tsx  TerminalPane.tsx  main.tsx
webui/src/components/: ProfilesModal.css  ProfilesModal.tsx  Toolbar.tsx  useGrpc.ts
