[package]
name = "putty_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport = "4.6" # 4.7 does not work for pseudo terminal created with socat anymore!
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
crossterm = "0.28"
# Add eframe for a minimal native window
eframe = "0.30"
