[package]
name    = "putty_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
putty_core = { path = "../putty_core" }
tokio      = { version = "1.27", features = ["full"] }
clap       = { version = "4.5", features = ["derive"] }
log        = "0.4"
env_logger = "0.11"
crossterm  = "0.28"