[package]
name = "putty_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
async-trait = "0.1.88"
env_logger = "0.11.8"
log = "0.4.27"
crossterm = "0.29.0"
tokio-serial = { version = "5.4.5", optional = true }
ssh2 = { version = "0.9.5", optional = true }
serde        = { version = "1.0", features = ["derive"] }   # (de)serialize structs
serde_json   = "1.0"                                        # read / write JSON
directories  = "6.0"                                       # manage user directories
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native"] }

[dev-dependencies]
regex = "1"
anyhow = "1.0"
tempfile = "3"
which = "8.0.0"
uuid    = { version = "1", features = ["v4"] }

[features]
default = ["serial", "ssh"]
serial = ["dep:tokio-serial"]
ssh = ["dep:ssh2"]
hw-tests = []
