[package]
name = "putty_core"
version = "0.1.1"
edition = "2021"
description = "Core connection, profile storage, and transport logic for putty-rs"
license = "MIT"
repository = "https://github.com/simon-rechermann/putty_rs_async"
readme = "README.md"
keywords = ["terminal", "serial", "ssh"]
categories = ["command-line-utilities"]

[lib]
crate-type = ["rlib"]

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
async-trait = "0.1.88"
log = "0.4.27"
tokio-serial = { version = "5.4.5", optional = true }
ssh2 = { version = "0.9.5", optional = true }

[dev-dependencies]
regex = "1"
anyhow = "1.0"
tempfile = "3"
which = "8.0.0"
uuid    = { version = "1", features = ["v4"] }
env_logger = "0.11.8"

[features]
default = ["serial", "ssh"]
serial = ["dep:tokio-serial"]
ssh = ["dep:ssh2"]
hw-tests = []
