[package]
name    = "putty_grpc_server"
version = "0.1.0"
edition = "2021"
build   = "build.rs"

[dependencies]
putty_core = { path = "../putty_core" }

tokio       = { version = "1.44.2", features = ["full"] }
tonic       = { version = "0.13.0", features = ["transport"] }
prost       = "0.13.5"
prost-types = "0.13.5"
log         = "0.4.27"

[build-dependencies]
tonic-build = "0.13.0"
